# frontend_v2

./: .env  .env.example  .gitignore  AGENTS.md  PLAN_categories.md  PLAN_companies.md  PLAN_customer.md  PLAN_product.md  PLAN_satuan.md  PLAN_supplier.md  PLAN_warehouse.md  QWEN.md  TODO_export_import.md  after-kembali-eval.md  after-login-attempt.md  after-pos-fix-reload.md  after-transaksi-menu.md  appointment-after-create.md  appointment-calendar-refreshed.md  appointment-current-snap.txt  appointment-list-refresh.md  appointment-list-view.md  appointment-login-filled.md  appointment-login-snapshot.md  appointment-ready-for-pay.md  bash.exe.stackdump  calendar-after-search-refresh.md  chrome-after-reload.txt  chrome-reloaded-after-taxfix.txt  chrome-snapshot-login.txt  cmd_debug.txt  compile.bat  current-appointment-calendar.md  debug.txt  eslint.config.js  fix_error.txt  index.html  localstorage-login.json  log_response.txt  network_requests.json  (+14 more)
.clinerules/: bahasa-indonesia.md  mcp-chrome-devtool.md  mcp-playwright.md
document/: PLAN.md  PLAN_POS.md  PLAN_Telegram.md  PLAN_all_records_feature.md  PLAN_appoinment_calendar.md  PLAN_appointment_patient_integration.md  PLAN_appointment_patient_pos_integration.md  PLAN_appointment_pos_integration.md  PLAN_backup_restore.md  PLAN_cetakJual.md  PLAN_costprice.md  PLAN_customer_no_rm_ktp.md  PLAN_design_poupdate.md  PLAN_detil penjualan.md  PLAN_detil_penjualan.md  PLAN_dokter.md  PLAN_excel_import_export.md  (+52 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+175 files in other folders)
